Update composer files

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,13 @@
 		}
 	],
     "require": {
-        "cruxoft/bolt-core": "^0.6.0"
+	    "php": "^7",
+	    "ext-json": "*",
+        "cruxoft/bolt-core": "^0.7.0"
     },
+	"require-dev": {
+		"cruxoft/dump": "^0.2.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"Bolt\\": "src"
